--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,9 @@ Jinja2==3.0.3
 MarkupSafe==2.0.1
 python-dotenv==0.19.2
 Werkzeug==2.0.2
+WTForms==3.0.1
+Flask-WTF==1.0.0
+Flask-SQLAlchemy
+Flask-Migrate
+psycopg2
+money
